--- a/dormsense-dashboard/package.json
+++ b/dormsense-dashboard/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.22",
+    "html-webpack-plugin": "^5.6.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18"
   }
